<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:layout_width="@dimen/homework2_width_of_flag"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <!-- Austria -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/homework2_height_of_flag"
            android:layout_marginTop="@dimen/homework2_top_bottom_margin"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_red"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/white"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_red"/>
        </LinearLayout>

        <TextView
            style="@style/homework2_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_austria"/>

        <!-- Poland -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/homework2_height_of_flag"
            android:layout_marginTop="@dimen/homework2_top_bottom_margin"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/white"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_red"/>
        </LinearLayout>

        <TextView
            style="@style/homework2_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_poland"/>

        <!-- Italy -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/homework2_height_of_flag"
            android:layout_marginTop="@dimen/homework2_top_bottom_margin"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_green"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_red"/>
        </LinearLayout>

        <TextView
            style="@style/homework2_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_italy"/>

        <!-- Columbia -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/homework2_height_of_flag"
            android:layout_marginTop="@dimen/homework2_top_bottom_margin"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/color_yellow"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_blue"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_red"/>
        </LinearLayout>

        <TextView
            style="@style/homework2_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_columbia"/>

        <!-- Madagascar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/homework2_height_of_flag"
            android:layout_marginTop="@dimen/homework2_top_bottom_margin"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/color_red"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/color_green"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/homework2_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_madagascar"/>

        <!-- Thailand -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/homework2_height_of_flag"
            android:layout_marginTop="@dimen/homework2_top_bottom_margin"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_red"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/white"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/color_blue"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/white"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_red"/>
        </LinearLayout>

        <TextView
            style="@style/homework2_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_thailand"/>

        <!-- Denmark -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/homework2_height_of_flag"
            android:layout_marginTop="@dimen/homework2_top_bottom_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="11"
                    android:background="@color/color_red"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:background="@android:color/white"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="11"
                    android:background="@color/color_red"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="11"
                    android:background="@color/color_red"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:background="@android:color/white"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="11"
                    android:background="@color/color_red"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/homework2_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/homework2_top_bottom_margin"
            android:text="@string/label_denmark"/>

    </LinearLayout>
</ScrollView>